syntax = "proto3";

message EmptyResponse {}
message EmptyRequest {}

enum STATUS {
    EXIST = 0;
    OK = 1;
    NOTFOUND = 2;
}

message FavoriteRequest {
    optional string user_id = 1;
    optional string podcast_id =2;
    optional string favorite_id = 3; 
}

message Favorite {
    string favorite_id =1;
    string user_id =2 ;
    string podcast_id = 3;
    string created_at = 4;
    string updated_at = 5;
}
message FavoriteResponse {
    bool error = 1;
    string message = 2;
    STATUS status = 3;
}

message FavoriteResponses {
    bool error=1;
    string message = 2;
    STATUS status = 3;
    repeated Favorite data = 4;
}

service FavoriteService {
    rpc RetrieveFavoriteByUser (FavoriteRequest) returns (FavoriteResponses) {}
    rpc AddFavorite (FavoriteRequest) returns (FavoriteResponse) {}
    rpc DeleteFavorite (FavoriteRequest) returns (FavoriteResponse) {}
    rpc RetrieveAllFavorite (EmptyRequest) returns (FavoriteResponses) {}
    rpc DeleteAllFavorite (EmptyRequest) returns (FavoriteResponse) {}
}

